--- a/Resources/Prototypes/Entities/Mobs/Species/slime.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/slime.yml
@@ -49,7 +49,7 @@
     sounds:
       Male: MaleSlime
       Female: FemaleSlime
-      Unsexed: MaleSlime
+      Unsexed: UnisexSlime
   - type: Damageable
     damageContainer: Biological
     damageModifierSet: Slime
