--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -508,9 +508,9 @@
     accent: zombieMoth
   - type: Vocal
     sounds:
-      Male: Mothroach
-      Female: Mothroach
-      Unsexed: Mothroach
+      Male: UnisexMoth
+      Female: UnisexMoth
+      Unsexed: UnisexMoth
     wilhelmProbability: 0.001
   - type: MobPrice
     price: 150
