--- a/Resources/Prototypes/Entities/Mobs/Species/reptilian.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/reptilian.yml
@@ -36,7 +36,7 @@
     sounds:
       Male: MaleReptilian
       Female: FemaleReptilian
-      Unsexed: MaleReptilian
+      Unsexed: UnisexReptilian
   - type: Damageable
     damageContainer: Biological
     damageModifierSet: Scale
