Revert "Remove the shock collar. (#31229)"
This reverts commit 0f6808e16a7b7beb3a9a24309b27bb1426c72c17.

--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -20,7 +20,7 @@
       - id: ClothingOuterHardsuitWarden
       - id: HoloprojectorSecurity
       - id: BookSpaceLaw
-      - id: ClothingBackpackElectropack
+      - id: ClothingNeckShockCollar
         amount: 2
       - id: RemoteSignaller
         amount: 2
@@ -46,7 +46,7 @@
       - id: DoorRemoteArmory
       - id: HoloprojectorSecurity
       - id: BookSpaceLaw
-      - id: ClothingBackpackElectropack
+      - id: ClothingNeckShockCollar
         amount: 2
       - id: RemoteSignaller
         amount: 2
