Made shockcollars only avaliable by research.

--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -20,7 +20,7 @@
       - id: ClothingOuterHardsuitWarden
       - id: HoloprojectorSecurity
       - id: BookSpaceLaw
-      - id: ClothingNeckShockCollar
+      - id: ClothingBackpackElectropack
         amount: 2
       - id: RemoteSignaller
         amount: 2
