--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -763,6 +763,7 @@
       - BoxShotgunUranium
       - BoxShellTranquilizer
       - ClothingBackpackElectropack
+      - ClothingNeckShockCollar
       - ExplosivePayload
       - FlashPayload
       - GrenadeBlast
