Fix up some of my tomfoolery

--- a/Resources/Prototypes/Recipes/Lathes/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/security.yml
@@ -103,8 +103,8 @@
   result: ClothingNeckShockCollar
   completetime: 4
   materials:
-    steel: 350
-    plastic: 250
+    Steel: 350
+    Plastic: 250
 
 - type: latheRecipe
   id: ForensicPad
