--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -84,9 +84,9 @@
 
 - type: jukebox
   id: OrdinaryDays
-  name: Klaus Veen - Ordinary Days
+  name: Klaus Veen - Ordinary Days v2
   path:
-    path: /Audio/Jukebox/ordinary_days.ogg
+    path: /Audio/Jukebox/ordinary_days_v2.ogg
 
 - type: jukebox
   id: 4ff
@@ -117,3 +117,69 @@
   name: Eero Lahtinen - Lax Lullaby
   path:
     path: /Audio/Jukebox/lax_lullaby.ogg
+
+- type: jukebox
+  id: Cizgi
+  name: TRT ÇOCUK - ÇİZGİ FİLM MAKİNESİ
+  path:
+    path: /Audio/Jukebox/cizgi.ogg
+
+- type: jukebox
+  id: DontDrinkIt
+  name: Pilotredsky - Don't Drink It
+  path:
+    path: /Audio/Jukebox/don't_drink_it.ogg
+
+- type: jukebox
+  id: EternalSanctity
+  name: flashygoodness - Eternal Sanctity
+  path:
+    path: /Audio/Jukebox/eternal_sanctity.ogg
+
+- type: jukebox
+  id: PillarsofCreation
+  name: flashygoodness - Pillars of Creation
+  path:
+    path: /Audio/Jukebox/pillars_of_creation.ogg
+
+- type: jukebox
+  id: GrinchsUltimatum
+  name: PilotRedSun - Grinch's Ultimatum
+  path:
+    path: /Audio/Jukebox/grinchs_ultimatum.ogg
+
+- type: jukebox
+  id: InThePocket
+  name: Flamclap - In The Pocket
+  path:
+    path: /Audio/Jukebox/in_the_pocket.ogg
+
+- type: jukebox
+  id: LaxLullaby
+  name: FFX - Prelude
+  path:
+    path: /Audio/Jukebox/prelude.ogg
+
+- type: jukebox
+  id: PresentingV
+  name: Souleye - Presenting VVVVVV
+  path:
+    path: /Audio/Jukebox/presenting_v.ogg
+
+- type: jukebox
+  id: SnowBurn
+  name: Fearofdark - Snow Burn
+  path:
+    path: /Audio/Jukebox/snow_burn.ogg
+
+- type: jukebox
+  id: TopollaTheatre
+  name: Keiichi Suzuki, Hirokazu Tanaka - Topolla Theatre
+  path:
+    path: /Audio/Jukebox/topolla_theatre.ogg
+
+- type: jukebox
+  id: YouBlowMyMind
+  name: Hideki Okugawa - You Blow My Mind
+  path:
+    path: /Audio/Jukebox/you_blow_my_mind.ogg
