--- a/Resources/Prototypes/SoundCollections/NukeMusic.yml
+++ b/Resources/Prototypes/SoundCollections/NukeMusic.yml
@@ -6,3 +6,4 @@
     - /Audio/StationEvents/clearly_nuclear.ogg    
     - /Audio/StationEvents/sound_station_14.ogg
     - /Audio/StationEvents/hurry_up.ogg
+    - /Audio/StationEvents/cyber_grind.ogg
