--- a/Resources/Prototypes/Roles/MindRoles/mind_roles.yml
+++ b/Resources/Prototypes/Roles/MindRoles/mind_roles.yml
@@ -32,16 +32,16 @@
 - type: entity
   parent: BaseMindRole
   id: MindRoleJob
-  name: mind-role-job-name
-  description: mind-role-job-description
+  name: Job Role
+#  description:
   # MindRoleComponent.JobPrototype is filled by SharedJobSystem
 
 # Subverted Silicon
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleSubvertedSilicon
-  name: mind-role-subverted-silicon-name
-  description: mind-role-subverted-silicon-description
+  name: Subverted Silicon Role
+  description:
   components:
   - type: SubvertedSiliconRole
 
@@ -49,8 +49,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleDragon
-  name: mind-role-dragon-name
-  description: mind-role-dragon-description
+  name: Dragon Role
+#  description:
   components:
   - type: MindRole
     antagPrototype: Dragon
@@ -63,8 +63,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleNinja
-  name: mind-role-ninja-name
-  description: mind-role-ninja-description
+  name: Space Ninja Role
+#  description: mind-role-ninja-description
   components:
   - type: MindRole
     antagPrototype: SpaceNinja
@@ -75,8 +75,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleNukeops
-  name: mind-role-nukeops-name
-  description: mind-role-nukeops-description
+  name: Nukeops Operative Role
+#  description: mind-role-nukeops-description
   components:
   - type: MindRole
     exclusiveAntag: true
@@ -86,8 +86,8 @@
 - type: entity
   parent: MindRoleNukeops
   id: MindRoleNukeopsMedic
-  name: mind-role-nukeops-medic-name
-  description: mind-role-nukeops-medic-description
+  name: Nukeops Medic Role
+#  description: mind-role-nukeops-medic-description
   components:
   - type: MindRole
     antagPrototype: NukeopsMedic
@@ -95,8 +95,8 @@
 - type: entity
   parent: MindRoleNukeops
   id: MindRoleNukeopsCommander
-  name: mind-role-nukeops-commander-name
-  description: mind-role-nukeops-commander-description
+  name: Nukeops Commander Role
+#  description: mind-role-nukeops-commander-description
   components:
   - type: MindRole
     antagPrototype: NukeopsCommander
@@ -105,8 +105,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleHeadRevolutionary
-  name: mind-role-head-revolutionary-name
-  description: mind-role-head-revolutionary-description
+  name: Head Revolutionary Role
+#  description: mind-role-head-revolutionary-description
   components:
   - type: MindRole
     antagPrototype: HeadRev
@@ -116,8 +116,8 @@
 - type: entity
   parent: MindRoleHeadRevolutionary
   id: MindRoleRevolutionary
-  name: mind-role-revolutionary-name
-  description: mind-role-revolutionary-description
+  name: Revolutionary Role
+#  description: mind-role-revolutionary-description
   components:
   - type: MindRole
     antagPrototype: Rev
@@ -126,8 +126,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleThief
-  name: mind-role-thief-name
-  description: mind-role-thief-description
+  name: Thief Role
+#  description: mind-role-thief-description
   components:
   - type: MindRole
     antagPrototype: Thief
@@ -137,8 +137,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleTraitor
-  name: mind-role-traitor-name
-  description: mind-role-traitor-description
+  name: Traitor Role
+#  description: mind-role-traitor-description
   components:
   - type: MindRole
     antagPrototype: Traitor
@@ -148,8 +148,8 @@
 - type: entity
   parent: MindRoleTraitor
   id: MindRoleTraitorSleeper
-  name: mind-role-traitor-sleeper-name
-  description: mind-role-traitor-sleeper-description
+  name: Sleeper Agent Role
+#  description: mind-role-traitor-sleeper-description
   components:
   - type: MindRole
     antagPrototype: TraitorSleeper
@@ -158,8 +158,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleInitialInfected
-  name: mind-role-initial-infected-name
-  description: mind-role-initial-infected-description
+  name: Initial Infected Role
+#  description: mind-role-initial-infected-description
   components:
   - type: MindRole
     antagPrototype: InitialInfected
@@ -169,8 +169,8 @@
 - type: entity
   parent: BaseMindRoleAntag
   id: MindRoleZombie
-  name: mind-role-zombie-name
-  description: mind-role-zombie-description
+  name: Zombie Role
+#  description: mind-role-zombie-description
   components:
   - type: MindRole
     antagPrototype: Zombie
