--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/base_structurelockers.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/base_structurelockers.yml
@@ -49,6 +49,8 @@
     node: done
     containers:
     - entity_storage
+  - type: Paintable
+    group: LockerSecure
 
 - type: entity
   id: LockerBaseSecure
