--- a/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
@@ -12,6 +12,8 @@
     - Energy
     reflectProb: 0.2
     spread: 90
+  - type: Paintable
+    group: CrateSteel
 
 - type: entity
   parent: CrateBaseWeldable
@@ -29,6 +31,8 @@
     - entity_storage
   - type: StaticPrice
     price: 80
+  - type: Paintable
+    group: CratePlastic
 
 - type: entity
   parent: CratePlastic
