Added Resurrection trigger and more effects

--- a/Resources/Prototypes/Polymorphs/polymorph.yml
+++ b/Resources/Prototypes/Polymorphs/polymorph.yml
@@ -165,6 +165,42 @@
     revertOnCrit: true
     duration: 20
 
+- type: polymorph
+  id: ArtifactBee
+  configuration:
+    entity: MobBee
+    forced: true
+    transferName: true
+    transferHumanoidAppearance: true
+    inventory: None
+    revertOnDeath: true
+    revertOnCrit: true
+    duration: 25
+
+- type: polymorph
+  id: ArtifactClownSpider
+  configuration:
+    entity: MobClownSpider
+    forced: true
+    transferName: true
+    transferHumanoidAppearance: true
+    inventory: None
+    revertOnDeath: true
+    revertOnCrit: true
+    duration: 25
+
+- type: polymorph
+  id: ArtifactFinfin
+  configuration:
+    entity: MobFinfin
+    forced: true
+    transferName: true
+    transferHumanoidAppearance: true
+    inventory: None
+    revertOnDeath: true
+    revertOnCrit: true
+    duration: 25
+
 # Polymorphs for Wizards polymorph self spell
 - type: polymorph
   id: WizardSpider
