--- a/Resources/Prototypes/XenoArch/artifact_triggers.yml
+++ b/Resources/Prototypes/XenoArch/artifact_triggers.yml
@@ -187,5 +187,12 @@
     possibleGas:
     - Plasma
 
+- type: artifactTrigger
+  id: TriggerResurrection
+  targetDepth: 4
+  triggerHint: artifact-trigger-hint-resurrection
+  components:
+  - type: ArtifactResurrectionTrigger
+
 #don't add in new targetdepth values until you have a few
 #or else it will skew heavily towards a few options.
