--- a/Resources/Prototypes/Roles/MindRoles/mind_roles.yml
+++ b/Resources/Prototypes/Roles/MindRoles/mind_roles.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: BaseMindRole
-  name: mind role entity
-  description: mind role entity
+  name: Mind Role
+  description: Mind Role entity
   abstract: true
   components:
   - type: MindRole
@@ -18,6 +18,7 @@
 - type: entity
   parent: BaseMindRole
   id: MindRoleObserver
+  name: Observer Role
   components:
   - type: ObserverRole
 
@@ -25,6 +26,7 @@
 - type: entity
   parent: BaseMindRole
   id: MindRoleGhostMarker
+  name: Ghost Role
   components:
   - type: GhostRoleMarkerRole
 
