--- a/Resources/Prototypes/radio_channels.yml
+++ b/Resources/Prototypes/radio_channels.yml
@@ -39,7 +39,7 @@
   name: chat-radio-science
   keycode: 'n'
   frequency: 1351
-  color: "#c261c2"
+  color: "#cd7ccd"
 
 - type: radioChannel
   id: Security
