--- a/Resources/Prototypes/secret_weights.yml
+++ b/Resources/Prototypes/secret_weights.yml
@@ -1,10 +1,10 @@
 - type: weightedRandom
   id: Secret
   weights:
-    Nukeops: 0.22
-    Traitor: 0.63
+    Nukeops: 0.20
+    Traitor: 0.60
     Zombie: 0.04
-    Zombieteors: 0.01
-    Survival: 0.09
+    Zombieteors: 0.02
+    Survival: 0.13
     KesslerSyndrome: 0.01
-    Revolutionary: 0.00
+#    Revolutionary: 0.05
