--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -100,6 +100,8 @@
     doAfterDelay: 10
     allowSelfRepair: false
   - type: BorgChassis
+    defaultRadioChannels:
+    - Binary
   - type: LockingWhitelist
     blacklist:
       components:
