--- a/Resources/Prototypes/Entities/Clothing/Neck/pins.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/pins.yml
@@ -154,6 +154,22 @@
  
 - type: entity
   parent: ClothingNeckPinBase
+  id: ClothingNeckNeurodiversityPin
+  name: neurodiversity pin
+  description: Be neurodivergent do crime.
+  components:
+  - type: Sprite
+    sprite: Clothing/Neck/Misc/neurodiversitypin.rsi
+    layers:
+    - state: neurodiversity
+  - type: Clothing
+    sprite: Clothing/Neck/Misc/neurodiversitypin.rsi
+    clothingVisuals:
+      neck:
+      - state: neurodiversity-equipped
+
+- type: entity
+  parent: ClothingNeckPinBase
   id: ClothingNeckAutismPin
   name: autism pin
   description: Be autism do crime.
@@ -167,19 +183,3 @@
     clothingVisuals:
       neck:
       - state: autism-equipped
-
-- type: entity
-  parent: ClothingNeckPinBase
-  id: ClothingNeckGoldAutismPin
-  name: golden autism pin
-  description: Be autism do warcrime.
-  components:
-  - type: Sprite
-    sprite: Clothing/Neck/Misc/goldautismpin.rsi
-    layers:
-    - state: goldautism
-  - type: Clothing
-    sprite: Clothing/Neck/Misc/goldautismpin.rsi
-    clothingVisuals:
-      neck:
-      - state: goldautism-equipped
