--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -406,3 +406,7 @@ FoodMeatFiestaKebab: FoodKebabSkewer
 
 # 2024-08-19
 ClothingNeckShockCollar: ClothingBackpackElectropack
+
+# 2024-08-22
+ComputerShuttleSalvage: null
+SalvageShuttleConsoleCircuitboard: null
