--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -410,3 +410,4 @@ ClothingNeckShockCollar: ClothingBackpackElectropack
 # 2024-08-22
 ComputerShuttleSalvage: null
 SalvageShuttleConsoleCircuitboard: null
+SalvageShuttleCircuitboardStealObjective: null
