--- a/Resources/Prototypes/Harmony/Loadlouts/loadout_groups.yml
+++ b/Resources/Prototypes/Harmony/Loadlouts/loadout_groups.yml
@@ -1,15 +1,15 @@
 # Server Pins
-- type: loadoutGroup
-  id: HarmonyTrinkets
-  name: loadout-group-harmonytrinkets
-  minLimit: 0
-  maxLimit: 1
-  loadouts:
-  - ClothingNeckSalamanderPin
-  - ClothingNeckMirosPin
-  - ClothingNeckLeviathanPin
-  - ClothingNeckVulturePin
-  - ClothingNeckAxolotlPin
-  - ClothingNeckFrontierPin
-  - ClothingNeckDeltaVPin
-  - ClothingNeckCosmaticDriftPin
+#- type: loadoutGroup
+#  id: HarmonyTrinkets
+#  name: loadout-group-harmonytrinkets
+#  minLimit: 0
+#  maxLimit: 1
+#  loadouts:
+#  - ClothingNeckSalamanderPin
+#  - ClothingNeckMirosPin
+#  - ClothingNeckLeviathanPin
+#  - ClothingNeckVulturePin
+#  - ClothingNeckAxolotlPin
+#  - ClothingNeckFrontierPin
+#  - ClothingNeckDeltaVPin
+#  - ClothingNeckCosmaticDriftPin
