Added clown skirt (#31207)
inital

--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/clown.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/clown.yml
@@ -16,6 +16,11 @@
     jumpsuit: ClothingUniformJumpsuitClown
 
 - type: loadout
+  id: ClownSkirt
+  equipment:
+    jumpsuit: ClothingUniformJumpskirtClown
+
+- type: loadout
   id: JesterSuit
   equipment:
     jumpsuit: ClothingUniformJumpsuitJester
