Boat changes, prototype ID fix for jukebox

--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -155,7 +155,7 @@
     path: /Audio/Jukebox/in_the_pocket.ogg
 
 - type: jukebox
-  id: LaxLullaby
+  id: FFXPrelude
   name: FFX - Prelude
   path:
     path: /Audio/Jukebox/prelude.ogg
