Fixed monkeys not being blinded when welding without a welding mask

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1196,6 +1196,7 @@
     speciesId: monkey
   - type: Deathgasp
     prototype: MonkeyDeathgasp
+  - type: Blindable
   - type: Cuffable
   - type: RotationVisuals
     defaultRotation: 90
