--- a/Resources/Prototypes/Recipes/Lathes/misc.yml
+++ b/Resources/Prototypes/Recipes/Lathes/misc.yml
@@ -221,3 +221,33 @@
   completetime: 3
   materials:
     Plastic: 200
+
+- type: latheRecipe
+  id: GoldRing
+  result: GoldRing
+  completetime: 10
+  materials:
+    Gold: 500
+
+- type: latheRecipe
+  id: SilverRing
+  result: SilverRing
+  completetime: 10
+  materials:
+    Silver: 500
+
+- type: latheRecipe
+  id: GoldRingDiamond
+  result: GoldRingDiamond
+  completetime: 15
+  materials:
+    Gold: 500
+    Diamond: 100
+
+- type: latheRecipe
+  id: SilverRingDiamond
+  result: SilverRingDiamond
+  completetime: 15
+  materials:
+    Silver: 500
+    Diamond: 100
