--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chapel.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chapel.yml
@@ -20,6 +20,8 @@
     BoxCandle: 2
     BoxCandleSmall: 2
     Urn: 5
+    SilverRing: 2
+    RingBox: 2
   emaggedInventory:
     ClothingOuterArmorCult: 1
     ClothingHeadHelmetCult: 1
