--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -202,8 +202,8 @@
       - ClothingHeadHatCone
       - GoldRing
       - SilverRing
-      - GoldRingDimond
-      - SilverRingDimond
+      - GoldRingDiamond
+      - SilverRingDiamond
 
   - type: EmagLatheRecipes
     emagStaticRecipes:
