Miners can't be unanchored. Only anchored.

--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/miners.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/miners.yml
@@ -22,6 +22,8 @@
     - type: Transform
       anchored: true
     - type: Anchorable
+      flags:
+      - Anchorable
     - type: Pullable
     - type: Sprite
       sprite: Structures/Piping/Atmospherics/miners.rsi
