Adding Miner's Cloak as an unlockable for salvage

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -25,3 +25,15 @@
   id: SalvageBoots
   equipment:
     shoes: ClothingShoesBootsSalvage
+
+# Mantle
+- type: loadoutEffectGroup
+  id: MinerCloak
+  equipment:
+    neck: ClothingNeckCloakMiner
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobSalvageSpecialist
+      time: 187200 #52 hrs (1 hour per week for 1 year)
