--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -27,7 +27,7 @@
     shoes: ClothingShoesBootsSalvage
 
 # Mantle
-- type: loadoutEffectGroup
+- type: loadout
   id: MinerCloak
   equipment:
     neck: ClothingNeckCloakMiner
