Cleaning this up in case we want to add more "senior salvager" gear in the future

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -1,3 +1,13 @@
+# "Senior Salvager" Time Req. Unofficial
+- type: loadoutEffectGroup
+  id: SeniorSalvager
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobSalvageSpecialist
+      time: 187200 #52 hrs (1 hour per week for 1 year)
+
 # Back
 - type: loadout
   id: SalvageSpecialistBackpack
@@ -32,8 +42,5 @@
   equipment:
     neck: ClothingNeckCloakMiner
   effects:
-  - !type:JobRequirementLoadoutEffect
-    requirement:
-      !type:RoleTimeRequirement
-      role: JobSalvageSpecialist
-      time: 187200 #52 hrs (1 hour per week for 1 year)
+ - !type:GroupLoadoutEffect
+    proto: SeniorSalvager
